--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "keywords": [],
     "author": "",
     "license": "ISC",
-    "dependencies": {},
+    "dependencies": {
+        "express": "^5.1.0"
+    },
     "devDependencies": {}
 }
