--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
-        "express": "^5.1.0"
+        "express": "^5.1.0",
+        "puppeteer": "^10.4.0"
     },
     "devDependencies": {}
 }
