--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "license": "ISC",
     "dependencies": {
         "express": "^5.1.0",
-        "puppeteer": "^10.4.0"
+        "playwright": "^1.17.0"
     },
     "devDependencies": {}
 }
