--- a/package.json
+++ b/package.json
@@ -11,8 +11,7 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
-        "express": "^5.1.0",
-        "playwright": "^1.17.0"
+        "express": "^5.1.0"
     },
     "devDependencies": {}
 }
