--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
-        "express": "^5.1.0"
+        "express": "^5.1.0",
+        "playwright": "^1.24.1"
     }
 }
