--- a/package.json
+++ b/package.json
@@ -12,6 +12,6 @@
     "license": "ISC",
     "dependencies": {
         "express": "^5.1.0",
-        "puppeteer": "^10.0.0"
+        "playwright": "^1.54.2"
     }
 }
