--- a/package.json
+++ b/package.json
@@ -12,6 +12,6 @@
     "license": "ISC",
     "dependencies": {
         "express": "^5.1.0",
-        "playwright": "^1.54.2"
+        "puppeteer": "^24.16.2"
     }
 }
