--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "license": "ISC",
     "dependencies": {
         "express": "^5.1.0",
-        "puppeteer": "^24.16.2"
+        "playwright-aws-lambda": "^0.11.0",
+        "playwright-core": "^1.55.0"
     }
 }
