--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
     "license": "ISC",
     "dependencies": {
         "express": "^5.1.0",
-        "puppeteer": "^24.17.0",
-        "uuid": "^11.1.0"
+        "puppeteer": "^24.17.0"
     }
 }
